--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<head>
+<head style="width:100%;height:100%;">
   <meta charset="utf-8">
   <title>Sheltonwelder</title>
   <base href="/">
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body style="width:100%;height:100%;">
+  <app-root style="width:100%;height:100%;"></app-root>
 </body>
 </html>
